Fix meteor top and left

--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,8 @@
   height: 125px;
   background-image: url(https://www.spriters-resource.com/resources/sheet_icons/44/46508.png);
 }
+
+#meteor1 {
+  top: 0px;
+  left: 0px;
+}
